--- a/jd-ticketing-project-start/pending-task.html
+++ b/jd-ticketing-project-start/pending-task.html
@@ -1,10 +1,389 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8">
-    <title>Title</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta
+            name="viewport"
+            content="width=device-width, initial-scale=1, shrink-to-fit=no"
+    />
+    <!-- Bootstrap CSS --->
+    <link
+            rel="stylesheet"
+            href="assets/vendor/bootstrap/css/bootstrap.min.css"
+    />
+    <link href="assets/vendor/fonts/circular-std/style.css" rel="stylesheet" />
+    <link rel="stylesheet" href="assets/libs/css/style.css" />
+    <link
+            rel="stylesheet"
+            href="assets/vendor/fonts/fontawesome/css/fontawesome-all.css"
+    />
+    <link
+            rel="stylesheet"
+            href="assets/vendor/charts/chartist-bundle/chartist.css"
+    />
+    <link
+            rel="stylesheet"
+            href="assets/vendor/charts/morris-bundle/morris.css"
+    />
+    <link
+            rel="stylesheet"
+            href="assets/vendor/fonts/material-design-iconic-font/css/materialdesignicons.min.css"
+    />
+    <link rel="stylesheet" href="assets/vendor/charts/c3charts/c3.css" />
+    <link
+            rel="stylesheet"
+            href="assets/vendor/fonts/flag-icon-css/flag-icon.min.css"
+    />
+    <title>Cybertek - Ticketing Project</title>
 </head>
-<body>
 
+<body>
+<!-- ============================================================== -->
+<!-- main wrapper -->
+<!-- ============================================================== -->
+<div class="dashboard-main-wrapper">
+    <!-- ============================================================== -->
+    <!-- navbar -->
+    <!-- ============================================================== -->
+    <div class="dashboard-header">
+        <nav class="navbar navbar-expand-lg bg-white fixed-top">
+            <a class="navbar-brand" href="https://www.cybertekschool.com/"
+            >Cybertek</a
+            >
+            <button
+                    class="navbar-toggler"
+                    type="button"
+                    data-toggle="collapse"
+                    data-target="#navbarSupportedContent"
+                    aria-controls="navbarSupportedContent"
+                    aria-expanded="false"
+                    aria-label="Toggle navigation"
+            >
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarSupportedContent">
+                <ul class="navbar-nav ml-auto navbar-right-top">
+                    <li class="nav-item dropdown nav-user">
+                        <a
+                                class="nav-link nav-user-img"
+                                href="#"
+                                id="navbarDropdownMenuLink2"
+                                data-toggle="dropdown"
+                                aria-haspopup="true"
+                                aria-expanded="false"
+                        ><img
+                                src="assets/images/avatar-1.jpg"
+                                alt=""
+                                class="user-avatar-md rounded-circle"
+                        /></a>
+                        <div
+                                class="dropdown-menu dropdown-menu-right nav-user-dropdown"
+                                aria-labelledby="navbarDropdownMenuLink2"
+                        >
+                            <div class="nav-user-info">
+                                <h5 class="mb-0 text-white nav-user-name">#Name</h5>
+                            </div>
+                            <a class="dropdown-item" href="#"
+                            ><i class="fas fa-user mr-2"></i>Account</a
+                            >
+                            <a class="dropdown-item" href="#"
+                            ><i class="fas fa-power-off mr-2"></i>Logout</a
+                            >
+                        </div>
+                    </li>
+                </ul>
+            </div>
+        </nav>
+    </div>
+    <!-- ============================================================== -->
+    <!-- end navbar -->
+    <!-- ============================================================== -->
+    <!-- ============================================================== -->
+    <!-- left sidebar -->
+    <!-- ============================================================== -->
+    <div class="nav-left-sidebar sidebar-dark">
+        <div class="menu-list">
+            <nav class="navbar navbar-expand-lg navbar-light">
+                <a class="d-xl-none d-lg-none" href="#">Dashboard</a>
+                <button
+                        class="navbar-toggler"
+                        type="button"
+                        data-toggle="collapse"
+                        data-target="#navbarNav"
+                        aria-controls="navbarNav"
+                        aria-expanded="false"
+                        aria-label="Toggle navigation"
+                >
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav flex-column">
+                        <li class="nav-item">
+                            <a
+                                    class="nav-link"
+                                    href="#"
+                                    data-toggle="collapse"
+                                    aria-expanded="false"
+                                    data-target="#submenu-2"
+                                    aria-controls="submenu-2"
+                            ><i class="fa fa-fw fa-rocket"></i>Administration</a
+                            >
+                            <div id="submenu-2" class="collapse submenu" style="">
+                                <ul class="nav flex-column">
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="user-create.html"
+                                        >User Create
+                                        </a>
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="project-create.html"
+                                        >Project Create</a>
+                                    </li>
+                                </ul>
+                            </div>
+                        </li>
+                        <li class="nav-item">
+                            <a
+                                    class="nav-link"
+                                    href="#"
+                                    data-toggle="collapse"
+                                    aria-expanded="false"
+                                    data-target="#submenu-3"
+                                    aria-controls="submenu-3"
+                            ><i class="fas fa-fw fa-chart-pie"></i>Manager</a
+                            >
+                            <div id="submenu-3" class="collapse submenu" style="">
+                                <ul class="nav flex-column">
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="task-assign.html"
+                                        >Task Assign</a
+                                        >
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="project-status.html"
+                                        >Project Status</a>
+                                </ul>
+                            </div>
+                        </li>
+                        <li class="nav-item">
+                            <a
+                                    class="nav-link"
+                                    href="#"
+                                    data-toggle="collapse"
+                                    aria-expanded="false"
+                                    data-target="#submenu-4"
+                                    aria-controls="submenu-4"
+                            ><i class="fab fa-fw fa-wpforms"></i>Employee</a
+                            >
+                            <div id="submenu-4" class="collapse submenu" style="">
+                                <ul class="nav flex-column">
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="pending-task.html"
+                                        >Pending Tasks</a
+                                        >
+                                    </li>
+                                    <li class="nav-item">
+                                        <a class="nav-link" href="archive.html"
+                                        >Archive</a
+                                        >
+                                    </li>
+                                </ul>
+                            </div>
+                        </li>
+                    </ul>
+                </div>
+            </nav>
+        </div>
+    </div>
+    <!-- ============================================================== -->
+    <!-- end left sidebar -->
+    <!-- ============================================================== -->
+    <!-- ============================================================== -->
+    <!-- wrapper  -->
+    <!-- ============================================================== -->
+    <div class="dashboard-wrapper">
+        <div class="dashboard-ecommerce">
+            <div class="container-fluid dashboard-content">
+                <!-- ============================================================== -->
+                <!-- pageheader  -->
+                <!-- ============================================================== -->
+                <div class="row">
+                    <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+                        <div class="page-header">
+                            <h3 class="mb-2">Task Status</h3>
+                        </div>
+                    </div>
+                </div>
+                <!-- ============================================================== -->
+                <!-- end pageheader  -->
+                <!-- ============================================================== -->
+                <div class="row">
+                    <div class="col-xl-10 col-lg-10 col-md-10 col-sm-10 col-10">
+                        <form>
+
+                            <div class="row">
+                                <div class="col-lg-4 col-md-4">
+                                    <div class="form-group">
+                                        <label >Project</label>
+                                        <select name="roleId" id="project" class="custom-select" required="required">
+                                            <option value="select">Select</option>
+                                            <option value="admin">PRJ001</option>
+                                            <option value="manager">Human Resource CRM</option>
+                                        </select>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col-lg-4 col-md-4">
+                                    <div class="form-group">
+                                        <label >Assigned Employee</label>
+                                        <select name="roleId" id="assignedEmployee" class="custom-select" required="required">
+                                            <option value="select">Select</option>
+                                            <option value="admin">Delisa Norre</option>
+                                            <option value="manager">John Kesy</option>
+                                            <option value="employsee">FS</option>
+                                        </select>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col-lg-4 col-md-4">
+                                    <div class="form-group">
+                                        <label for="firstName" class="col-form-label">Task Subject</label>
+                                        <input id="firstName" type="text" class="form-control">
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col-lg-4 col-md-4 ">
+
+                                    <div class="form-group">
+                                        <label for="exampleFormControlTextarea1">Details</label>
+                                        <textarea class="form-control" id="exampleFormControlTextarea1" rows="1"></textarea>
+                                    </div>
+                                </div>
+                            </div>
+                            <div class="row">
+                                <div class="col-lg-4 col-md-4">
+                                    <div class="form-group">
+                                        <label >Status</label>
+                                        <select name="roleId" id="status" class="custom-select" required="required">
+                                            <option value="select">Select</option>
+                                            <option value="open">Open</option>
+                                            <option value="inProgress">In Progress</option>
+                                            <option value="UAT">UAT Testing</option>
+                                            <option value="completed">Completed</option>
+                                        </select>
+                                    </div>
+                                </div>
+                            </div>
+
+                            <div class="row">
+                                <div class="col-lg-4 col-md-4 col-lg-4">
+                                    <div class="float-right">
+                                        <button class="btn btn-success" type="submit" >Save</button>
+                                    </div>
+                                </div>
+                            </div>
+                        </form>
+                    </div>
+
+                    <div class="row">
+                        <div class="col-xl-12 col-lg-12 col-md-12 col-sm-12 col-12">
+                            <div class="page-header">
+                                <h2 class="age-header-title">Task List</h2>
+                            </div>
+                        </div>
+
+                        <table class="table table-striped">
+                            <thead>
+                            <tr>
+                                <th scope="col">Project</th>
+                                <th scope="col">Task Subject</th>
+                                <th scope="col">Assigned Employee</th>
+                                <th scope="col">Assigned Date</th>
+                                <th scope="col">Status</th>
+                                <th scope="col">#Action</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            <tr>
+                                <td>PRJ001-Human Resource CRM</td>
+                                <td>Database Connection</td>
+                                <td>John Kesy</td>
+                                <td>11/01/2020 19:05</td>
+                                <td>In Progress</td>
+                                <td>
+                                    <a href=""><button type="button" class="btn btn-warning btn-sm">Update</button> </a>
+                                </td>
+                            </tr>
+
+                            <tr>
+                                <td>PRJ001-Human Resource CRM</td>
+                                <td>General Analysis</td>
+                                <td>John Kesy</td>
+                                <td>10/28/2020 19:05</td>
+                                <td>Open</td>
+                                <td>
+                                    <a href=""><button type="button" class="btn btn-warning btn-sm">Update</button> </a>
+                                </td>
+                            </tr>
+                            <tr>
+                                <td>PRJ001-Human Resource CRM</td>
+                                <td>Deployment Activity-Docker</td>
+                                <td>John Kesy</td>
+                                <td>10/23/2020 19:05</td>
+                                <td>In Progress</td>
+                                <td>
+                                    <a href=""><button type="button" class="btn btn-warning btn-sm">Update</button> </a>
+                                </td>
+                            </tr>
+                            </tbody>
+                        </table>
+
+                        <footer class="page-footer font-small blue fixed-bottom">
+                            <div class="footer-copyright text-center py-3"> © 2020 Cybertek -All rights reserved.</div>
+                        </footer>
+                    </div>
+
+                </div>
+            </div>
+            <!-- ============================================================== -->
+
+            <!-- ============================================================== -->
+        </div>
+        <!-- ============================================================== -->
+        <!-- end wrapper  -->
+        <!-- ============================================================== -->
+    </div>
+</div>
+<!-- ============================================================== -->
+<!-- end main wrapper  -->
+<!-- ============================================================== -->
+<!-- Optional JavaScript -->
+<!-- jquery 3.3.1 -->
+<script src="assets/vendor/jquery/jquery-3.3.1.min.js"></script>
+<!-- bootstap bundle js -->
+<script src="assets/vendor/bootstrap/js/bootstrap.bundle.js"></script>
+<!-- slimscroll js -->
+<script src="assets/vendor/slimscroll/jquery.slimscroll.js"></script>
+<!-- main js -->
+<script src="assets/libs/js/main-js.js"></script>
+<!-- chart chartist js -->
+<script src="assets/vendor/charts/chartist-bundle/chartist.min.js"></script>
+<!-- sparkline js -->
+<script src="assets/vendor/charts/sparkline/jquery.sparkline.js"></script>
+<!-- morris js -->
+<script src="assets/vendor/charts/morris-bundle/raphael.min.js"></script>
+<script src="assets/vendor/charts/morris-bundle/morris.js"></script>
+<!-- chart c3 js -->
+<script src="assets/vendor/charts/c3charts/c3.min.js"></script>
+<script src="assets/vendor/charts/c3charts/d3-5.4.0.min.js"></script>
+<script src="assets/vendor/charts/c3charts/C3chartjs.js"></script>
+<script src="assets/libs/js/dashboard-ecommerce.js"></script>
 </body>
 </html>
